--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Build binary wheel and a source tarball
         run: python -m build 
       - name: Publish distribution to PyPI
-        uses: pypa/gh-action-pypi-publish@v1.8.5 
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PIPY_PASSWORD }}
 
